exports[`snapshotFormatter > does not include a note if the snapshot is already verbose 1`] = `
uid=1_1 checkbox "checkbox" checked
  uid=1_2 statictext "text"

`;

exports[`snapshotFormatter > formats with DevTools data included into a snapshot 1`] = `
uid=1_1 checkbox "checkbox" checked [selected in the DevTools Elements panel]
  uid=1_2 statictext "text"

`;

exports[`snapshotFormatter > formats with DevTools data not included into a snapshot 1`] = `
Note: there is a selected element in the DevTools Elements panel but it is not included into the current a11y tree snapshot.
Get a verbose snapshot to include all elements if you are interested in the selected element.

uid=1_1 checkbox "checkbox" checked
  uid=1_2 statictext "text"

`;
